--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "blog_app": "file:..",
     "firebase": "^10.10.0",
     "flowbite-react": "^0.7.8",
     "react": "^18.2.0",
